# agate-lookup

./: .travis.yml  AUTHORS.rst  CHANGELOG.rst  MANIFEST.in  README.rst  example.py  pyproject.toml  requirements-py2.txt  requirements-py3.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml
agatelookup/: __init__.py  source.py  table.py  table_lookup.py  table_remote.py
docs/: Makefile  conf.py  index.rst
tests/: test_source.py  test_table.py  test_table_lookup.py  test_table_remote.py
